[package]
name = "actionkv"
version = "0.1.0"
authors = ["Myroslav Lisniak <myroslav.lisniak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.1"
base64 = "0.13.0"
byteorder = "1.2"
crc = "1.7"
serde = "1.0.130"
serde_json = "1.0.72"
serde_derive = "1.0.130"
bincode = "1.3.3"
itertools = "0.10.1"
config = "0.11.0"
log = "0.4.14"
log4rs = "1.0.0"
tokio = { version = "1", features = ["full"] }

[lib]
name = "libactionkv"
path = "src/lib.rs"


[[bin]]
name = "akv_network"
path = "src/akv_network.rs"